make the "position: fixed;" thing work on both FF and IE in order to keep the toolbar visible
git-svn-id: http://svn.dojotoolkit.org/src@3499 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/widget/templates/HtmlEditorToolbar.css
+++ b/trunk/src/widget/templates/HtmlEditorToolbar.css
@@ -32,6 +32,16 @@
 	background-position: 0px 0px;
 }
 
+body {
+	background:url(images/blank.gif) fixed;
+}
+
+.IEFixedToolbar {
+	position:absolute;
+	/* top:0; */
+	top: expression(eval((document.documentElement||document.body).scrollTop));
+}
+
 div.bigIcon {
 	width: 40px;
 	height: 40px; 
@@ -52,7 +62,7 @@ div.bigIcon {
 	padding-right: 3px;
 	cursor: pointer;
 	border: 1px solid transparent;
-	-border: 1px solid white;
+	_border: none;
 }
 
 span.icon {
